@@ -15,13 +15,8 @@
   <dd><b>GnuWin32</b> provides Win32 ports of tools with a <a href="http://www.gnu.org/">GNU</a> or similar <a href="http://opensource.org/licenses/">open source license</a>.</dd>
   <dt><a href="https://sourceforge.net/projects/externaldiff">External diff Tool</a></dt>
   <dd><b>External diff Tool</b> is an <a href="http://www.eclipse.org/">Eclipse</a> Plugin</a> that allows the launch of WinMerge (or an other external diff tool) for file compares rather than the default built-in Eclipse diff tool.</dd>
-</dl>
-<h3>CVS</h3>
-<dl>
-  <dt><a href="http://cvsgui.sourceforge.net/">WinCVS</a></dt>
-  <dd><b>WinCVS</b> is a GUI front-end for <acronym title="Concurrent Versions System">CVS</acronym>.</dd>
-  <dt><a href="http://www.tortoisecvs.org/">TortoiseCVS</a></dt>
-  <dd><b>TortoiseCVS</b> lets you work with files under <acronym title="Concurrent Versions System">CVS</acronym> version control directly from Windows Explorer.</dd>
+  <dt><a href="http://tortoisesvn.tigris.org/">TortoiseSVN</a></dt>
+  <dd><b>TortoiseSVN</b> lets you work with files under <em>Subversion</em> version control directly from Windows Explorer.</dd>
 </dl>
 <h3>Regular expressions</h3>
 <dl>
