@@ -1,3 +1,9 @@
+2006-09-05 Tim
+ BUG: [ 1552149 ] Web: CVS link in sidebar
+  Web: links.php page.inc
+  Web\developer: index.php
+  Web\developer\l10n: instructions.php
+
 2006-09-04 Tim
  PATCH: [ 1552144 ] Web: Fixes to developers-needed -page
   Web\developer: needed.php
